@@ -1,12 +1,7 @@
 {
-  "count": 23,
+  "count": 22,
   "uniques": 12,
   "clones": [
-    {
-      "timestamp": "2022-08-05T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
     {
       "timestamp": "2022-08-06T00:00:00Z",
       "count": 2,
